--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,12 +38,12 @@ jobs:
         --outdir dist/
         .
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@console
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.BOT_EXTERNE }}
         repository_url: https://test.pypi.org/legacy/
     - name: Publish distribution 📦 to PyPI
       if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@console
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.BOT_EXTERNE }}
