--- a/.github/workflows/test_module_bot.yml
+++ b/.github/workflows/test_module_bot.yml
@@ -4,9 +4,9 @@ name: Test Module Bot
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ master ]
+    branches: [ Graphique ]
   pull_request:
-    branches: [ master ]
+    branches: [ Graphique ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
